--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/lovable-uploads/c9373560-0c9b-49ec-b219-c790ae137677.png" type="image/png">
-    <title>Icecreamplayz_YT | Portfolio | Software Engineering</title>
+    <title>Realice | Portfolio | Software Engineering</title>
     <meta name="description" content="Life to No limits" />
     <meta name="author" content="David (Icecreamplayz_YT)" />
 
     <meta property="og:title" content="Icecreamplayz_YT | Portfolio | Software Engineering" />
     <meta property="og:description" content="Passionate developer specializing in Python, Discord bots, and full-stack web development. 🚀 4 years experience • 5+ active projects • Year 11 student" />
+    <meta property="og:image" content="https://cdn.vervecustoms.com/banners/Screenshot%202025-12-21%20170528.png" />
   </head>
 
   <body>
