--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <link rel="icon" href="/lovable-uploads/c9373560-0c9b-49ec-b219-c790ae137677.png" type="image/png">
     <title>Realice | Portfolio | Software Engineering</title>
     <meta name="description" content="Life to No limits" />
-    <meta name="author" content="David (Icecreamplayz_YT)" />
+    <meta name="author" content="David (@Realice)" />
 
     <meta property="og:title" content="Icecreamplayz_YT | Portfolio | Software Engineering" />
-    <meta property="og:description" content="Passionate developer specializing in Python, Discord bots, and full-stack web development. 🚀 4 years experience • 5+ active projects • Year 11 student" />
-    <meta property="og:image" content="https://cdn.vervecustoms.com/banners/Screenshot%202025-12-21%20170528.png" />
+    <meta property="og:description" content="Passionate developer specialising in Python, Discord bots, and full-stack web development. Currently in Year 11, preparing for IGCSE examinations. Want something like this or need a commission? feel free to DM me on Discord or send me an email (not recommended, I won't see it for days)" />
+    <meta property="og:image" content="https://i.imgur.com/ULc4c4q.png" />
+    <meta property="og:image:width" content="1920">
+    <meta property="og:image:height" content="1080">
   </head>
 
   <body>
